--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+logo: /images/IMG_0505.jpeg
+description: My Personal Web Page 
 show_downloads: true
-google_analytics:
+google_analytics: false
 theme: jekyll-theme-minimal
