--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ title: Mahdieh Abbasi
 description: mahdieh.abbasi.1@ulaval.ca
 logo: /images/IMG_0505.jpeg
 theme: jekyll-theme-minimal
+plugins:
+  - jekyll-toc
